--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -36,7 +36,7 @@
         </md-list>
       </md-card-content>
       <md-card-actions>
-
+        <button md-button (click)="goBack()">BACK</button>
       </md-card-actions>
     </md-card>
   </div>
