--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: Roboto, sans-serif;
+  font-family: 'Lato', 'Roboto', sans-serif;
 }
 
 $lt-gray: #ddd;
