--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,6 +7,11 @@
     </div>
   </div>
 
+  <div [hidden]="dishes">
+    <md-spinner></md-spinner>
+    <h4>Loading . . . Please Wait</h4>
+  </div>
+
   <div fxFlex>
     <md-grid-list cols="2" rowHeight="200px">
       <md-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
