--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -46,19 +46,35 @@
 
     <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
       <p>
-        <md-input-container class="half-width">
+        <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched) ? 'warn' : 'primary'}}">
           <input mdInput formControlName="firstname" placeholder="First Name" type="text" required>
+          <md-hint>
+            <span [hidden]="!(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched)">
+              firstname is required</span>
+          </md-hint>
         </md-input-container>
-        <md-input-container class="half-width">
+        <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched) ? 'warn' : 'primary'}}">
           <input mdInput formControlName="lastname" placeholder="Last Name" type="text" required>
+          <md-hint>
+            <span [hidden]="!(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched)">
+              lastname is required</span>
+          </md-hint>
         </md-input-container>
       </p>
       <p>
-        <md-input-container class="half-width">
+        <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched) ? 'warn' : 'primary'}}">
           <input mdInput formControlName="telnum" placeholder="Tel. Number" type="tel" required>
+          <md-hint>
+            <span [hidden]="!(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched)">
+              Tel. number is required</span>
+          </md-hint>
         </md-input-container>
-        <md-input-container class="half-width">
+        <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched) ? 'warn' : 'primary'}}">
           <input mdInput formControlName="email" placeholder="Email" type="email" required>
+          <md-hint>
+            <span [hidden]="!(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched)">
+              Email ID is required</span>
+          </md-hint>
         </md-input-container>
       </p>
       <table class="form-size">
@@ -74,11 +90,14 @@
         </td>
       </table>
       <p>
-        <md-input-container class="full-width">
-          <textarea mdInput formControlName="message" placeholder="Your Feedback" rows=12></textarea>
+        <md-input-container class="full-width" dividerColor="{{(feedbackForm.get('message').hasError('required') && feedbackForm.get('message').touched)? 'warn' : 'primary'}}">
+          <textarea mdInput formControlName="message" placeholder="Your Feedback" rows=12 required></textarea>
+          <md-hint>
+            <span [hidden]="!(feedbackForm.get('message').hasError('required') && feedbackForm.get('message').touched)">Comment likh bosdike!</span>
+          </md-hint>
         </md-input-container>
       </p>
-      <button type="submit" md-button class="background-primary text-floral-white">Submit</button>
+      <button type="submit" md-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
     </form>
   </div>
 
