--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -52,6 +52,34 @@
         <button md-button (click)="goBack()">BACK</button>
       </md-card-actions>
     </md-card>
+    <md-card>
+      <md-card-content>
+        <form [formGroup]="commentsForm" novalidate (ngSubmit)="onSubmit()">
+          <p>
+            <md-input-container>
+              <input mdInput placeholder="Author" type="text" formControlName="author">
+              <md-hint [hidden]="!(formErrors.author)">
+                {{ formErrors.author}}
+              </md-hint>
+            </md-input-container>
+          </p>
+          <p>
+            <md-slider formControlName="rating" [max]="5" [min]="1" [step]="step" [thumb-label]="true" [tick-interval]="1">
+            </md-slider>
+          </p>
+          <p>
+            <md-input-container>
+              <textarea mdInput placeholder="Author" placeholder="Your Comment" rows="8" formControlName="comment"></textarea>
+              <md-hint [hidden]="!(formErrors.comment)">
+                {{ formErrors.comment}}
+              </md-hint>
+            </md-input-container>
+          </p>
+          <button type="submit" md-button class="background-primary text-floral-white" [disabled]="commentsForm.invalid">Submit</button>
+        </form>
+        <p>{{ commentsForm.value | json }} {{ commentsForm.status | json }}</p>
+      </md-card-content>
+    </md-card>
   </div>
 
 </div>
